BugFix: Set Body overflow to hidden

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,6 @@
 body {
     margin-bottom: 110px;
+    overflow: hidden;
 }
 
 .header {
